Applying GN modifier with Capture Attribute node clutters resulting mesh with anonymous attributes #94435

Closed
opened 2021-12-28 10:19:01 +01:00 by Ludvik Koutny · 19 comments
Contributor

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76

Blender Version
Broken: version: 3.0.0, branch: SelectThrough (modified), commit date: 2021-12-15 12:21, hash: 6349dd43b1
Worked: (newest version of Blender that worked as expected)

Short description of error
When applying a GN modifier which uses a GN node network containing Capture Attribute node(s), the resulting mesh contains anonymous attributes user has not intended to output. This results in ugly clutter user has to clean up themselves.
1,
image.png
2,
image.png
3,
image.png

Exact steps for others to reproduce the error

  1. Add a GN modifier to any mesh
  2. Utilize Capture Attribute node within the mesh
  3. Apply the GN modifier
    Result: The resulting mesh contains internal anonymous attributes user has not intended to output
    Expected: The resulting mesh contains only the attributes user has intended to output
**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76 **Blender Version** Broken: version: 3.0.0, branch: SelectThrough (modified), commit date: 2021-12-15 12:21, hash: `6349dd43b1` Worked: (newest version of Blender that worked as expected) **Short description of error** When applying a GN modifier which uses a GN node network containing Capture Attribute node(s), the resulting mesh contains anonymous attributes user has not intended to output. This results in ugly clutter user has to clean up themselves. 1, ![image.png](https://archive.blender.org/developer/F12778875/image.png) 2, ![image.png](https://archive.blender.org/developer/F12778877/image.png) 3, ![image.png](https://archive.blender.org/developer/F12778879/image.png) **Exact steps for others to reproduce the error** 1. Add a GN modifier to any mesh 2. Utilize Capture Attribute node within the mesh 3. Apply the GN modifier Result: The resulting mesh contains internal anonymous attributes user has not intended to output Expected: The resulting mesh contains only the attributes user has intended to output
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Not sure if this is really a bug, this captured attribute might still be useful in other cases.

Not sure if this is really a bug, this captured attribute might still be useful in other cases.
Author
Contributor

In #94435#1280638, @mano-wii wrote:
Not sure if this is really a bug, this captured attribute might still be useful in other cases.

Yes, but in that case, if you have a node tree with let's say 20 captured float attributes, how do you know which one belonged to which node, when they all get assigned generic name with random number? How is that useful?

> In #94435#1280638, @mano-wii wrote: > Not sure if this is really a bug, this captured attribute might still be useful in other cases. Yes, but in that case, if you have a node tree with let's say 20 captured float attributes, how do you know which one belonged to which node, when they all get assigned generic name with random number? How is that useful?
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Yeah, this is a bug, anonymous attributes should be cleared either when evaluation finishes, or when applying the modifier. Not sure which one yet.

Yeah, this is a bug, anonymous attributes should be cleared either when evaluation finishes, or when applying the modifier. Not sure which one yet.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I think it makes sense to remove these attributes in modifier_apply_obdata.
We can't remove them when evaluation finishes, because we may want to keep them around for e.g. viewer nodes.

I think it makes sense to remove these attributes in `modifier_apply_obdata`. We can't remove them when evaluation finishes, because we may want to keep them around for e.g. viewer nodes.
Jacques Lucke self-assigned this 2022-02-02 13:41:01 +01:00
Sophie_Martin commented 2022-02-02 15:00:14 +01:00 (Migrated from localhost:3001)

Added subscriber: @Sophie_Martin

Added subscriber: @Sophie_Martin
Sophie_Martin commented 2022-02-02 15:00:14 +01:00 (Migrated from localhost:3001)

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Sophie_Martin commented 2022-02-02 15:00:14 +01:00 (Migrated from localhost:3001)

This comment was removed by @Sophie_Martin

*This comment was removed by @Sophie_Martin*
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by 4be87e97f4

This issue was referenced by 4be87e97f48533e16594b6ec73980ffb2ba12ade
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Contributor

@JacquesLucke
This is still broken. It works when the modifier is applied, but it still does not work right when the object is converted to mesh via bpy.ops.object.convert(target='MESH').

  1. Open the attached file: AttributeBug.blend
  2. Convert the cube to mesh using Object>Apply>Visual Geometry to Mesh:
    image.png
    Result:
    image.png
@JacquesLucke This is still broken. It works when the modifier is applied, but it still does not work right when the object is converted to mesh via bpy.ops.object.convert(target='MESH'). 1. Open the attached file: [AttributeBug.blend](https://archive.blender.org/developer/F12855124/AttributeBug.blend) 2. Convert the cube to mesh using Object>Apply>Visual Geometry to Mesh: ![image.png](https://archive.blender.org/developer/F12855126/image.png) Result: ![image.png](https://archive.blender.org/developer/F12855128/image.png)
Member

Thanks, please make a new bug report.

Thanks, please make a new bug report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94435
No description provided.