Fix T94435: remove anonymous attributes when applying modifier

Differential Revision: https://developer.blender.org/D13994